--- a/example/package.json
+++ b/example/package.json
@@ -5,11 +5,13 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
+    "avataaars": "^1.2.1",
+    "avataaars-customizer": "file:..",
+    "lodash": "^4.17.15",
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
-    "react-scripts": "^1.1.4",
-    "avataaars-customizer": "file:.."
+    "react-scripts": "^1.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
